tests/cases/generics/errors/generic-aggregate-enum-arity.ari
enum Either[L, R] {
  Left(L),
  Right(R),
}

struct Holder {
  value: Either[i64],
}

fn main() -> i64 {
  return 0;
}
